--- a/views/book_store.html
+++ b/views/book_store.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
   <link rel="stylesheet" href="/stylesheets/main.css">
-  <script src="/javascripts/bower_components/angular/angular.js"></script>
-  <script src="/javascripts/bower_components/angular-route/angular-route.js"></script>
-  <script src="/javascripts/bower_components/angular-load/angular-load.js"></script>
+  <script src="/javascripts/bower_components/angular/angular.min.js"></script>
+  <script src="/javascripts/bower_components/angular-route/angular-route.min.js"></script>
+  <script src="/javascripts/bower_components/angular-load/angular-load.min.js"></script>
   <script src="/javascripts/service.js"></script>
   <script src="/javascripts/controller.js"></script>
   <script src="/javascripts/main.js"></script>
@@ -38,6 +38,10 @@
 
   <div class="loading_layer" id="loadingLayer" ng-if="loading">
     <img src="/images/loading.gif" alt="" class="loading">
+  </div>
+
+  <div class="footer">
+    <a href="http://www.miitbeian.gov.cn/" title="" target="" class="footer-text">粤ICP备16043840号</a>
   </div>
 </body>
 
