--- a/views/resume.html
+++ b/views/resume.html
@@ -29,27 +29,108 @@
         <i class="arrow_item"></i>
       </div>
     </div>
-    <div class="slide_projects" r-style="-webkit-transform: translateZ({width}px) ">
+    <div class="slide_skills" r-style="-webkit-transform: translate3d({half}px, 0, {half}px)  rotateY(-90deg)">
       <div class="wrapper">
         <p class="title">Skills</p>
         <div class="skill-item">
-          <div class="circleProgress_wrapper">
-            <div class="wrapper right">
-              <div class="circleProgress rightcircle"></div>
+          <div class="circle-wrapper">
+            <div class="circle-item">
+              <div class="circle circle80-left"></div>
             </div>
-            <div class="wrapper left">
-              <div class="circleProgress leftcircle"></div>
+            <div class="circle-item left">
+              <div class="circle circle-right-full"></div>
             </div>
+          </div>
+          <p class="skill-number">
+            80%
+          </p>
+          <div class="pot-bar">
+            <span class="item-pot">Html</span>
+            <span class="item-pot">Css</span>
+            <span class="item-pot">Javascript</span>
+            <span class="item-pot">Jquery/Zepto</span>
+          </div>
+        </div>
+        <div class="skill-item">
+          <div class="circle-wrapper">
+            <div class="circle-item">
+              <div class="circle circle-left-empty"></div>
+            </div>
+            <div class="circle-item left">
+              <div class="circle circle-right-full"></div>
+            </div>
+          </div>
+          <p class="skill-number">
+            50%
+          </p>
+          <div class="pot-bar">
+            <span class="item-pot">PhotoShop</span>
+            <span class="item-pot">Php</span>
+            <span class="item-pot">MVC</span>
+            <span class="item-pot">Angular</span>
+            <span class="item-pot">MVVM</span>
+          </div>
+        </div>
+        <div class="skill-item">
+          <div class="circle-wrapper">
+            <div class="circle-item">
+              <div class="circle circle-left-empty"></div>
+            </div>
+            <div class="circle-item left">
+              <div class="circle circle20-right"></div>
+            </div>
+          </div>
+          <p class="skill-number">
+            other↑
+          </p>
+          <div class="pot-bar">
+            <span class="item-pot">Canvas</span>
+            <span class="item-pot">mySql</span>
+            <span class="item-pot">NodeJs</span>
+            <span class="item-pot">Mongodb</span>
           </div>
         </div>
       </div>
     </div>
-    <div class="slide_contact" r-style="-webkit-transform: translate3d(-{half}px, 0, {half}px)  rotateY(90deg) rotateZ(180deg)"></div>
-    <div class="slide_info" r-style="-webkit-transform: translate3d({half}px, 0, {half}px)  rotateY(-90deg) rotateZ(180deg)"></div>
+    <div class="slide_info" r-style="-webkit-transform: translate3d(-{half}px, 0, {half}px)  rotateY(90deg)">
+      <div class="wrapper">
+        <a href="//www.ganother.com" title="" target="_target" class="info-link">博客:激素不正常</a>
+        <p class="desc">快来看我!快来批判我!</p>
+      </div>
+    </div>
+    <div class="slide_projects"  r-style="-webkit-transform: translateZ({width}px) rotateY(180deg)">
+      <div class="wrapper">
+        <div class="title">projects</div>
+        <div class="project-bar">
+          <div class="project-item">
+            <div class="project-img">
+              <img src="/images/community.jpg" alt="" class="img">
+            </div>
+            <a class="project-title" href="//w.midea.com/community">美的社区</a>
+          </div>
+          <div class="project-item">
+            <div class="project-img">
+              <img src="/images/acts.jpg" alt="" class="img">
+            </div>
+            <p class="project-title">美的商城活动卖场+小游戏</p>
+          </div>
+          <div class="project-item">
+            <div class="project-img">
+              <img src="/images/backsystem.jpg" alt="" class="img">
+            </div>
+            <p class="project-title">某管理后台(Angular)</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 
-<div class="loading_layer" id="loadingLayer" style="display:none;">
+<div class="footer">
+  <a href="http://www.miitbeian.gov.cn/" title="" target="" class="footer-text">粤ICP备16043840号</a>
+</div>
+
+<div class="loading_layer" id="loadingLayer" style="display:block;">
   <img src="/images/loading.gif" alt="" class="loading">
 </div>
 </body>
